# pybind

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
cmake/: python_CMakeLists.cmake  python_config.c  python_config.h  python_config_macos.h  python_download.cmake  stdex_download.cmake
include/config/: config.hpp  python.hpp  stdex.hpp
include/pybind/: adapter_interface.hpp  allocator_interface.hpp  args.hpp  base.hpp  bases.hpp  bindable.hpp  class.hpp  class_core.hpp  class_info.hpp  class_new_interface.hpp  class_scope.hpp  class_type.hpp  class_type_scope.hpp  class_type_scope_interface.hpp  compare_adapter.hpp  config.hpp  const.hpp  constructor.hpp  constructor_new.hpp  constructor_placement.hpp  convert_adapter.hpp  debug.hpp  def.hpp  def_adapter.hpp  def_call.hpp  def_parser.hpp  def_proxy.hpp  def_type.hpp  detail.hpp  dict.hpp  dictobject.hpp  enum.hpp  exception.hpp  exports.hpp  extract.hpp  extract_operator.hpp  factorable.hpp  function.hpp  function_adapter.hpp  function_call.hpp  (+63 more)
include/pybind/adapter/: base_adapter.hpp  bindable_adapter.hpp  compare_adapter.hpp  constructor_adapter.hpp  convert_adapter.hpp  destroy_adapter.hpp  function_adapter.hpp  functor_adapter.hpp  getattro_adapter.hpp  hash_adapter.hpp  mapping_adapter.hpp  member_adapter.hpp  method_adapter.hpp  new_adapter.hpp  number_binary_adapter.hpp  number_inplace_adapter.hpp  number_unary_adapter.hpp  proxy_adapter.hpp  repr_adapter.hpp  sequence_get_adapter.hpp  sequence_set_adapter.hpp  smart_pointer_adapter.hpp
include/pybind/call/: function_args_call.hpp  function_call.hpp  function_kernel_args_call.hpp  function_kernel_call.hpp  function_proxy_args_call.hpp  function_proxy_call.hpp  function_proxy_kernel_args_call.hpp  function_proxy_kernel_call.hpp  method_args_call.hpp  method_call.hpp  method_kernel_args_call.hpp  method_kernel_call.hpp  method_proxy_args_call.hpp  method_proxy_call.hpp  method_proxy_kernel_args_call.hpp  method_proxy_kernel_call.hpp
include/pybind/generator/: base_.hpp  class_.hpp  helper_.hpp  interface_.hpp  proxy_.hpp  struct_.hpp  structhash_.hpp  superclass_.hpp
include/pybind/helper/: bases_helper.hpp  dict_helper.hpp  dict_iterator.hpp  dict_pair_value.hpp  list_const_iterator.hpp  list_helper.hpp  tuple_const_iterator.hpp  tuple_iterator.hpp  type_cast_result.hpp
include/pybind/mutex/: mutex_scope.hpp
include/pybind/stl/: stl_type_cast.hpp
pybind/: bases.hpp  class.hpp  class_core.hpp  class_scope.hpp  class_type.hpp  config.hpp  def.hpp  def_call.hpp  def_parser.hpp  def_proxy.hpp  def_type.hpp  exports.hpp  extract.hpp  from_py_to_cpp_parser.hpp  method_call.hpp  method_parser.hpp  method_proxy.hpp  method_type.hpp  module.hpp  pybind.hpp  system.hpp  type_cast.hpp  types.hpp
sandbox/: Test1.py  contract_main.cpp  main.cpp  sandbox.vcxproj  tinypy_main.cpp
solution/: pybind.ncb  pybind.sln  pybind.vcproj  pybind.vcxproj  sandbox.vcxproj
src/: adapter_interface.cpp  args.cpp  base.cpp  bindable.cpp  class_core.cpp  class_info.cpp  class_scope.cpp  class_type.cpp  class_type_scope.cpp  constructor.cpp  constructor_adapter.cpp  debug.cpp  def.cpp  def_adapter.cpp  def_proxy.cpp  def_type.cpp  detail.cpp  dict.cpp  dict_helper.cpp  dict_iterator.cpp  dict_pair_value.cpp  dictobject.cpp  enum.cpp  exception.cpp  extract.cpp  factorable.cpp  from_py_to_cpp_parser.cpp  function.cpp  function_python.cpp  function_python.hpp  function_type.cpp  functor.cpp  functor_adapter.cpp  functor_proxy.cpp  functor_python.cpp  functor_python.hpp  functor_type.cpp  functor_type.hpp  helper.cpp  import_operator.cpp  (+47 more)
src/generator/: helper_.cpp
src/python/: python_class_type_scope.cpp  python_class_type_scope.hpp  python_class_type_scope_helper.cpp  python_class_type_scope_helper.hpp  python_function.cpp  python_function.hpp  python_functor.cpp  python_functor.hpp  python_kernel.cpp  python_kernel.hpp  python_member.cpp  python_member.hpp  python_method.cpp  python_method.hpp  python_pod.cpp  python_pod.hpp  python_system.cpp  python_system.hpp
src/stl/: stl_type_cast.cpp
src/tinypy/: tinypy_class_type_scope.cpp  tinypy_class_type_scope.hpp  tinypy_kernel.cpp  tinypy_kernel.hpp
trunk/include/config/: config.hpp  python.hpp
trunk/include/pybind/: adapter_interface.hpp  bases.hpp  bindable.hpp  class.hpp  class_core.hpp  class_info.hpp  class_new_interface.hpp  class_type_scope.hpp  compare_adapter.hpp  constructor.hpp  constructor_adapter.hpp  constructor_new.hpp  constructor_placement.hpp  convert_adapter.hpp  destroy_adapter.hpp  detail.hpp  dict.hpp  exception.hpp  exports.hpp  extract.hpp  function.hpp  function_adapter.hpp  function_call.hpp  function_parser.hpp  function_proxy_call.hpp  functor.hpp  functor_adapter.hpp  getattro_adapter.hpp  hash_adapter.hpp  helper.hpp  list.hpp  logger.hpp  mapping_adapter.hpp  member_adapter.hpp  method_adapter.hpp  method_call.hpp  method_proxy_call.hpp  new_adapter.hpp  object.hpp  pod.hpp  (+9 more)
trunk/solution/: pybind.vcxproj
trunk/src/: adapter_interface.cpp  class_core.cpp  class_info.cpp  class_type.cpp  class_type.hpp  class_type_scope.cpp  class_type_scope.hpp  constructor.cpp  detail.cpp  dict.cpp  exception.cpp  extract.cpp  function.cpp  function_type.cpp  function_type.hpp  functor.cpp  functor_type.cpp  functor_type.hpp  helper.cpp  kernel.cpp  list.cpp  member_type.cpp  member_type.hpp  method_type.cpp  method_type.hpp  object.cpp  pickle.cpp  pod.cpp  pod.hpp  static_var.hpp  stl_type_cast.cpp  system.cpp  tuple.cpp  type_cast.cpp
